--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="navbar-nav ml-auto flex-nowrap">
                     <a class="nav-item nav-link" href="https://www.denmau.me">Home</a
                     >
-                    <a class="nav-item nav-link active" href="assets/Dennis_Kamau_CV.pdf">Get CV</a>
+                    <a class="nav-item nav-link active" href="assets/Dennis_Kamau_CV.pdf">Resume</a>
                     <a class="nav-item nav-link" href="#projects">Projects</a>
                     <a class="nav-item nav-link" href="#contact">Contact</a>
                 </div>
@@ -86,7 +86,6 @@
                         fortunate to have worked alongside senior developers who I envy and draw inspiration
                         from. This has taught me to write code that is maintainable, easy to reuse and understand.</p>
                 </div>
-                <!-- TODO: animated upward arrow to show scrolling needed-->
             </div>
         </div>
     </div>
@@ -95,7 +94,7 @@
 <!-- Skills  -->
 <section id="skills">
     <div class="container">
-        <h2 class="section-title">My Skills</h2>
+        <h2 class="section-title">Tech Stack</h2>
         <p class="section-sub-title">Web Development</p>
         <div class="container cards-container">
             <div class="row">
@@ -231,138 +230,143 @@
         <h2 class="section-title">Projects</h2>
         <div class="row justify-content-between">
             <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
-                <div class="row text-center">
-                    <div class="col d-flex justify-content-end">
-                        <img
-                                src="img/FoodFitScreenshot1.png"
-                                alt="foodfit app"
-                                height="400"
-                                width="200"
-                        />
-                    </div>
-                    <div class="col space-equally-vertically">
-                        <div><p class="card-title">Food Fit</p></div>
-                        <div>
-                            <img src="img/java.png" alt="java" height="51" width="37"/>
-                        </div>
-                        <div>
+                <div class="card-body">
+                    <div class="row text-center">
+                        <div class="col d-flex justify-content-end">
                             <img
-                                    src="img/firebase.png"
-                                    alt="firebase"
-                                    height="55"
-                                    width="40"
+                                    src="img/FoodFitScreenshot1.png"
+                                    alt="foodfit app"
+                                    height="400"
+                                    width="200"
                             />
                         </div>
+                        <div class="col space-equally-vertically">
+                            <div><p class="card-title">Food Fit</p></div>
+                            <div>
+                                <img src="img/java.png" alt="java" height="51" width="37"/>
+                            </div>
+                            <div>
+                                <img
+                                        src="img/firebase.png"
+                                        alt="firebase"
+                                        height="55"
+                                        width="40"
+                                />
+                            </div>
 
-                        <div>
-                            <!--TODO: Add Link to FoodFit APK-->
-                            <a
-                                    href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
-                                    class="btn btn-primary"
-                                    target="_blank"
-                            >Download APP</a
-                            >
-                        </div>
-                        <div>
-                            <a
-                                    href="https://www.github.com/denmau/foodfit"
-                                    class="btn btn-outline-secondary"
-                            >View on GitHub</a
-                            >
-                        </div>
+                            <div>
+                                <!--TODO: Add Link to FoodFit APK-->
+                                <a
+                                        href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
+                                        class="btn btn-primary"
+                                        target="_blank"
+                                >Download APP</a
+                                >
+                            </div>
+                            <div>
+                                <a
+                                        href="https://www.github.com/denmau/foodfit"
+                                        class="btn btn-outline-secondary"
+                                >View on GitHub</a
+                                >
+                            </div>
 
+                        </div>
                     </div>
-                </div>
-                <div class="card-body">
-                    <p class="card-text">
-                        Food Fit is a Java
-                        <span class="color-red">Android App</span> that gives you access
-                        to 5000+<span class="color-red">*</span> recipes, each with
-                        nutritional information. Users can search for or view random
-                        recipes. Recipes are fetched from an
-                        <span class="color-red">API</span>. The app uses
-                        <span class="color-red">Firebase</span> for Authentication:
-                        login, signup and password reset.
-                    </p>
-                    <p class="card-text">
-                        <small class="text-muted"
-                        ><span class="color-red">*</span> Although the App has
-                            capacity to display 5000+ recipes, I am using a free plan of
-                            the API with a capped number of recipe-requests per
-                            month.</small
-                        >
-                    </p>
+
+                    <div>
+                        <p class="card-text">
+                            Food Fit is a Java
+                            <span class="color-red">Android App</span> that gives you access
+                            to 5000+<span class="color-red">*</span> recipes, each with
+                            nutritional information. Users can search for or view random
+                            recipes. Recipes are fetched from an
+                            <span class="color-red">API</span>. The app uses
+                            <span class="color-red">Firebase</span> for Authentication:
+                            login, signup and password reset.
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted"
+                            ><span class="color-red">*</span> Although the App has
+                                capacity to display 5000+ recipes, I am using a free plan of
+                                the API with a capped number of recipe-requests per
+                                month.</small
+                            >
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
-                <div class="row text-center">
-                    <div class="col d-flex justify-content-end">
-                        <img
-                                src="img/denmaublog.png"
-                                alt="foodfit app"
-                                height="400"
-                                width="200"
-                                class="border border-success"
-                        />
-                    </div>
-                    <div class="col space-equally-vertically">
-                        <div><p class="card-title">Denmau Blog</p></div>
-                        <div>
-                            <img
-                                    src="img/python.png"
-                                    alt="java"
-                                    height="66"
-                                    width="67"
-                            />
-                        </div>
-                        <div>
-                            <img
-                                    src="img/django.png"
-                                    alt="firebase"
-                                    height="75"
-                                    width="58"
-                            />
-                        </div>
-                        <div>
-                            <a
-                                    href="http://denmaublog.herokuapp.com/"
-                                    class="btn btn-primary"
-                            >View Live Site</a
-                            >
-                        </div>
-                        <div>
-                            <a
-                                    href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                                    class="btn btn-outline-secondary"
-                            >View on GitHub</a
-                            >
-                        </div>
-                    </div>
-                </div>
                 <div class="card-body">
-                    <p class="card-text">
-                        This is <span class="color-red">python Django blog</span> that
-                        allows <span class="color-red">authenticated</span> users to
-                        write and post blog articles. Authors are allowed to create,
-                        read, update or even delete their articles (<span
-                            class="color-red"
-                    >CRUD</span
-                    >). This web application allows any logged in user to leave a
-                        comment for each article. There is also a reset password
-                        feature for users who forget their passwords. Styling is done
-                        by <span class="color-red">bootstrap</span>.
-                    </p>
-                    <p class="card-text">
-                        The admin has rights to edit or delete any article or comment.
-                    </p>
-                    <p class="card-text">
-                        <small class="text-muted"
-                        >The App uses <span class="color-red">SQLite</span> Database
-                            for the development version, and
-                            <span class="color-red">PostgreSQL</span> for the deployed
-                            version.
-                        </small>
-                    </p>
+                    <div class="row text-center">
+                        <div class="col d-flex justify-content-end">
+                            <img
+                                    src="img/denmaublog.png"
+                                    alt="foodfit app"
+                                    height="400"
+                                    width="200"
+                                    class="border border-success"
+                            />
+                        </div>
+                        <div class="col space-equally-vertically">
+                            <div><p class="card-title">Denmau Blog</p></div>
+                            <div>
+                                <img
+                                        src="img/python.png"
+                                        alt="java"
+                                        height="66"
+                                        width="67"
+                                />
+                            </div>
+                            <div>
+                                <img
+                                        src="img/django.png"
+                                        alt="firebase"
+                                        height="75"
+                                        width="58"
+                                />
+                            </div>
+                            <div>
+                                <a
+                                        href="http://denmaublog.herokuapp.com/"
+                                        class="btn btn-primary"
+                                >View Live Site</a
+                                >
+                            </div>
+                            <div>
+                                <a
+                                        href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                                        class="btn btn-outline-secondary"
+                                >View on GitHub</a
+                                >
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <p class="card-text">
+                            This is <span class="color-red">python Django blog</span> that
+                            allows <span class="color-red">authenticated</span> users to
+                            write and post blog articles. Authors are allowed to create,
+                            read, update or even delete their articles (<span
+                                class="color-red"
+                        >CRUD</span
+                        >). This web application allows any logged in user to leave a
+                            comment for each article. There is also a reset password
+                            feature for users who forget their passwords. Styling is done
+                            by <span class="color-red">bootstrap</span>.
+                        </p>
+                        <p class="card-text">
+                            The admin has rights to edit or delete any article or comment.
+                        </p>
+                        <p class="card-text">
+                            <small class="text-muted"
+                            >The App uses <span class="color-red">SQLite</span> Database
+                                for the development version, and
+                                <span class="color-red">PostgreSQL</span> for the deployed
+                                version.
+                            </small>
+                        </p>
+                    </div>
                 </div>
             </div>
 
@@ -457,30 +461,30 @@
         <div class="row socials-container">
             <div class="col">
                 <div
-                        class="social-container"
+                        class="social-container" style="cursor: pointer"
                         onclick="window.location='mailto:dmkamau475@gmail.com';"
                 >
                     <img src="img/iconmonstr-email.svg" alt=""/>
                 </div>
                 <div
-                        class="color-black text-small" style="cursor: pointer"
+                        class="color-black" style="cursor: pointer"
                         onclick="window.location='mailto:dmkamau475@gmail.com';"
                 >
-                    dmkamau475@gmail.com
+                    <span class="ml-1"></span>dmkamau475@gmail.com
                 </div>
             </div>
             <div class="col">
                 <div
-                        class="social-container"
+                        class="social-container" style="cursor: pointer"
                         onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
                 >
                     <img src="img/iconmonstr-whatsapp.svg" alt="email"/>
                 </div>
                 <div
-                        class="color-black text-small" style="cursor: pointer"
+                        class="color-black" style="cursor: pointer"
                         onclick="window.location='https://api.whatsapp.com/send?phone=254759360020';"
                 >
-                    +254759360020
+                    <span class="ml-1"></span>+254759360020
                 </div>
             </div>
         </div>
