--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description"
-          content="I am a Full Stack Machine Learning Engineer based in Kenya. My speciality is Machine Learning, Python Django and react."/>
+          content=">I am a Full Stack Machine Learning Engineer based in Kenya. My speciality is Machine Learning with Tensorflow, Python Django and React."/>
     <meta name="author" content="Dennis Kamau"/>
 
     <!-- Canonical Link -->
@@ -47,7 +47,7 @@
     <div class="container">
         <!-- Navigation bar -->
         <nav class="navbar navbar-expand-md background-black">
-            <a href="https://www.denmau.me" class="branding">Denmau</a>
+            <a href="https://www.denmau.me" class="branding active">Denmau</a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
                     aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,8 +57,7 @@
 
             <div class="collapse navbar-collapse text-right" id="navbarText">
                 <div class="navbar-nav ml-auto flex-nowrap">
-                    <a class="nav-item nav-link" href="https://www.denmau.me">Home</a
-                    >
+                    <a class="nav-item nav-link" href="https://www.denmau.me">Home</a>
                     <a class="nav-item nav-link active" href="assets/Dennis_Kamau_CV.pdf">Resume</a>
                     <a class="nav-item nav-link" href="#projects">Projects</a>
                     <a class="nav-item nav-link" href="#contact">Contact</a>
@@ -81,8 +80,7 @@
                     <p>I develop for the web</p>
                 </div>
                 <div>
-                    <p class="about-me-summary">I am a Full Stack Machine Learning Engineer based in Kenya. My
-                        speciality is Machine Learning, Python Django and react. I am
+                    <p class="about-me-summary">I am a Full Stack Machine Learning Engineer based in Kenya. I have been
                         fortunate to have worked alongside senior developers who I envy and draw inspiration
                         from. This has taught me to write code that is maintainable, easy to reuse and understand.</p>
                 </div>
@@ -95,6 +93,7 @@
 <section id="skills">
     <div class="container">
         <h2 class="section-title">Tech Stack</h2>
+        <span class="section-underlay"></span>
         <p class="section-sub-title">Web Development</p>
         <div class="container cards-container">
             <div class="row">
@@ -228,6 +227,7 @@
 <section id="projects" class="background-black">
     <div class="container">
         <h2 class="section-title">Projects</h2>
+        <span class="section-underlay"></span>
         <div class="row justify-content-between">
             <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="card-body">
@@ -405,7 +405,7 @@
 <section id="contact" class="background-grey">
     <div class="container">
         <h2 class="section-title">Contact Me</h2>
-
+        <span class="section-underlay"></span>
         <!-- Contact Form Start -->
         <div class="form-container">
             <form
