--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
 </main>
 <div class="fadeblacktogrey"></div>
 <!-- Skills  -->
-<section id="skills">
+<section id="stack">
     <div class="container">
         <h2 class="section-title">Tech Stack</h2>
-        <span class="section-underlay"></span>
         <p class="section-sub-title">Web Development</p>
         <div class="container cards-container">
             <div class="row">
@@ -227,7 +226,6 @@
 <section id="projects" class="background-black">
     <div class="container">
         <h2 class="section-title">Projects</h2>
-        <span class="section-underlay"></span>
         <div class="row justify-content-between">
             <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
                 <div class="card-body">
@@ -405,7 +403,6 @@
 <section id="contact" class="background-grey">
     <div class="container">
         <h2 class="section-title">Contact Me</h2>
-        <span class="section-underlay"></span>
         <!-- Contact Form Start -->
         <div class="form-container">
             <form
