fix mobile responsiveness issues

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
     <div class="container">
         <h2 class="section-title">Projects</h2>
         <div class="row justify-content-between">
-            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="col-12 col-sm-12 col-lg-5 card mb-2">
                 <div class="card-body">
                     <div class="row text-center">
-                        <div class="col d-flex justify-content-end">
+                        <div class="col-6 d-flex justify-content-end">
                             <img
                                     src="img/FoodFitScreenshot1.png"
                                     alt="foodfit app"
@@ -247,29 +247,22 @@
                                     width="200"
                             />
                         </div>
-                        <div class="col space-equally-vertically">
+                        <div class="col-6 space-equally-vertically">
                             <div><p class="card-title">Food Fit</p></div>
-                            <div>
-                                <img src="img/java.png" alt="java" height="51" width="37"/>
-                            </div>
-                            <div>
-                                <img
-                                        src="img/firebase.png"
-                                        alt="firebase"
-                                        height="55"
-                                        width="40"
-                                />
-                            </div>
+                            <div><img src="img/java.png" alt="java" height="51" width="37"/></div>
+                            <div><img
+                                    src="img/firebase.png"
+                                    alt="firebase"
+                                    height="55"
+                                    width="40"
+                            /></div>
 
-                            <div>
-                                <!--TODO: Add Link to FoodFit APK-->
-                                <a
-                                        href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
-                                        class="btn btn-primary"
-                                        target="_blank"
-                                >Download APP</a
-                                >
-                            </div>
+                            <div><a
+                                    href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
+                                    class="btn btn-primary"
+                                    target="_blank"
+                            >Download APP</a
+                            ></div>
                             <div>
                                 <a
                                         href="https://www.github.com/denmau/foodfit"
@@ -300,10 +293,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="col-12 col-sm-12 col-lg-5 card mb-2">
                 <div class="card-body">
                     <div class="row text-center">
-                        <div class="col d-flex justify-content-end">
+                        <div class="col-6 d-flex justify-content-end">
                             <img
                                     src="img/denmaublog.png"
                                     alt="foodfit app"
@@ -312,7 +305,7 @@
                                     class="border border-success"
                             />
                         </div>
-                        <div class="col space-equally-vertically">
+                        <div class="col-6 space-equally-vertically">
                             <div><p class="card-title">Denmau Blog</p></div>
                             <div>
                                 <img
@@ -374,7 +367,7 @@
                 </div>
             </div>
 
-            <div class="card col-12 col-sm-12 col-md-12 col-lg-5">
+            <div class="col-12 col-sm-12 col-lg-5 card mb-2">
                 <div class="card-body">
                     <p class="card-text">
                         This GitHub repo contains most of my Machine Learning mini-projects, and those I encountered
