--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     />
 
     <!-- bootstrap -->
-    <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <!--          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"/>-->
-    <!--Local Bootstrap File for use during development-->
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
 
     <!-- animate -->
@@ -63,7 +60,7 @@
                 aria-expanded="false"
                 aria-label="Toggle navigation"
         >
-            <span><img src="img/menu.png" alt="menu" class="h-100"/></span>
+            <img src="img/menu.png" alt="menu" class="h-100"/>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -583,11 +580,8 @@
 <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
 
 <!-- JavaScript Bundle with Popper -->
-<script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-        crossorigin="anonymous"
-></script>
+<script src="js/bootstrap.bundle.min.js"></script>
+
 <!-- Cloudflare Web Analytics -->
 <script
         defer
