fix issues with projects section

--- a/index.html
+++ b/index.html
@@ -281,15 +281,34 @@
                       alt="FodFit app screenshot"
                     />
                   </div>
-                  <div class="col-4 d-flex flex-column justify-content-evenly">
-                    <p class="card-title">Food Fit</p>
-                    <img src="img/java.png" alt="java" height="51" width="37" />
+                  <div class="col-6">
                     <img
-                      src="img/firebase.png"
-                      alt="firebase"
-                      height="55"
-                      width="40"
+                      class="img-thumbnail"
+                      src="img/FoodFitScreenshot2.png"
+                      alt="FodFit app screenshot"
                     />
+                  </div>
+                </div>
+                <div class="p-2">
+                  <p class="card-text">
+                    Food Fit is a Java
+                    <span class="color-red">Android App</span> that gives you
+                    access to 5000+<span class="color-red">*</span> recipes,
+                    each with nutritional information. Users can search for or
+                    view random recipes, sourced from an
+                    <span class="color-red">API</span>. The app uses
+                    <span class="color-red">Firebase</span> for Authentication:
+                    login, signup and password reset.
+                  </p>
+                  <p class="card-text">
+                    <small class="text-muted"
+                      ><span class="color-red">*</span> Although the App has
+                      capacity to display 5000+ recipes, I am using a free plan
+                      of the API with a capped number of recipe-requests per
+                      month.</small
+                    >
+                  </p>
+                  <div class="text-center">
                     <a
                       href="https://drive.google.com/drive/folders/1cmIpdWfX9TAK08KQArfVofIYuxxUxYm4?usp=sharing"
                       class="btn btn-primary"
@@ -303,26 +322,6 @@
                     >
                   </div>
                 </div>
-                <div class="p-2">
-                  <p class="card-text">
-                    Food Fit is a Java
-                    <span class="color-red">Android App</span> that gives you
-                    access to 5000+<span class="color-red">*</span> recipes,
-                    each with nutritional information. Users can search for or
-                    view random recipes. Recipes are fetched from an
-                    <span class="color-red">API</span>. The app uses
-                    <span class="color-red">Firebase</span> for Authentication:
-                    login, signup and password reset.
-                  </p>
-                  <p class="card-text">
-                    <small class="text-muted"
-                      ><span class="color-red">*</span> Although the App has
-                      capacity to display 5000+ recipes, I am using a free plan
-                      of the API with a capped number of recipe-requests per
-                      month.</small
-                    >
-                  </p>
-                </div>
               </div>
             </div>
           </div>
@@ -330,47 +329,21 @@
             <div class="card">
               <div class="card-body">
                 <div class="row">
-                  <div class="col-6">
+                  <div class="col-12">
                     <img
+                      src="img/django-blog.png"
+                      alt="Django Blog"
                       class="img-thumbnail"
-                      src="img/denmaublog.png"
-                      alt="Django Blog screenshot"
                     />
-                  </div>
-                  <div class="col-4 d-flex flex-column justify-content-evenly">
-                    <p class="card-title">Django Blog</p>
-                    <img
-                      src="img/python.png"
-                      alt="python"
-                      height="51"
-                      width="37"
-                    />
-                    <img
-                      src="img/django.png"
-                      alt="django"
-                      height="55"
-                      width="40"
-                    />
-                    <a
-                      href="http://denmaublog.herokuapp.com"
-                      class="btn btn-primary"
-                      target="_blank"
-                      >Live Site</a
-                    >
-                    <a
-                      href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
-                      class="btn btn-secondary"
-                      >View code</a
-                    >
                   </div>
                 </div>
                 <div class="p-2">
                   <p class="card-text">
-                    This is
-                    <span class="color-red">python Django blog</span> that
-                    allows <span class="color-red">authenticated</span> users to
-                    write and post blog articles. Authors are allowed to create,
-                    read, update or even delete their articles (<span
+                    This is a python
+                    <span class="color-red"> Django blog</span> that allows
+                    <span class="color-red">authenticated</span> users to write
+                    and post blog articles. Authors are allowed to create, read,
+                    update or even delete their articles (<span
                       class="color-red"
                       >CRUD</span
                     >). This web application allows any logged in user to leave
@@ -383,14 +356,24 @@
                     comment.
                   </p>
                   <p class="card-text">
-                    <small class="text-muted"
-                      >The App uses
-                      <span class="color-red">SQLite</span> Database for the
-                      development version, and
-                      <span class="color-red">PostgreSQL</span> for the deployed
-                      version.
+                    <small class="text-muted">
+                      The Blog uses
+                      <span class="color-red">PostgreSQL</span> Database.
                     </small>
                   </p>
+                </div>
+                <div class="text-center">
+                  <a
+                    href="http://denmaublog.herokuapp.com"
+                    class="btn btn-primary"
+                    target="_blank"
+                    >Live Site</a
+                  >
+                  <a
+                    href="https://github.com/denmau/100-days-of-code/tree/main/day-2-django-blog"
+                    class="btn btn-secondary"
+                    >View code</a
+                  >
                 </div>
               </div>
             </div>
